Fix Dark Mode and regionalization

--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ footer{
 }
   
   #switch::after{
-    content: "Modo Oscuro";
+    content: "Dark Mode";
     visibility: hidden;
     position: absolute;
     top: 3rem;
